<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModelsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:layout_margin="@dimen/button_padding"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:text="@string/model_select_title"/>
    <LinearLayout
        android:layout_margin="@dimen/button_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/model_1_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_1_name"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_1_class"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/model_1_performance_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_1_performance"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/button_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/model_2_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_2_name"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_2_class"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/model_2_performance_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_2_performance"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/button_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/model_3_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_3_name"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_3_class"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/model_3_performance_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_3_performance"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/button_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/model_4_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_4_name"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_4_class"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/model_4_performance_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_4_performance"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>